--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.446.0",
